--- a/templates/Santiago/etc/fail2ban/jail.conf.erb
+++ b/templates/Santiago/etc/fail2ban/jail.conf.erb
@@ -161,6 +161,10 @@ banaction = iptables-multiport
 # The simplest action to take: ban only
 action_ = %(banaction)s[name=%(__name__)s, bantime="%(bantime)s", port="%(port)s", protocol="%(protocol)s", chain="%(chain)s"]
 
+# ban & send an e-mail with buffered report to the destemail.
+action_mb = %(banaction)s[name=%(__name__)s, port="%(port)s", protocol="%(protocol)s"]
+            %(mta)s-buffered[name=%(__name__)s, dest="%(destemail)s", protocol="%(protocol)s"]
+
 # ban & send an e-mail with whois report to the destemail.
 action_mw = %(banaction)s[name=%(__name__)s, bantime="%(bantime)s", port="%(port)s", protocol="%(protocol)s", chain="%(chain)s"]
             %(mta)s-whois[name=%(__name__)s, dest="%(destemail)s", protocol="%(protocol)s", chain="%(chain)s"]
