Added support for nginx http auth error for all vhosts with names like *error*.log

--- a/templates/jessie/etc/fail2ban/jail.conf.erb
+++ b/templates/jessie/etc/fail2ban/jail.conf.erb
@@ -312,7 +312,7 @@ logpath = /var/log/lighttpd/error.log
 enabled = <%= scope.lookupvar('::fail2ban::jails').include? "nginx-http-auth" %>
 filter  = nginx-http-auth
 port    = http,https
-logpath = /var/log/nginx/error.log
+logpath = /var/log/nginx/*error*.log
 
 # Monitor roundcube server
 
