Conditional include of new jails in jail.conf
Using additional_jails parameter to include or not the new jails in
jail.conf config file.

--- a/templates/jessie/etc/fail2ban/jail.conf.erb
+++ b/templates/jessie/etc/fail2ban/jail.conf.erb
@@ -560,6 +560,7 @@ logpath  = /var/log/messages     ; nrpe.cfg may define a different log_facility
 maxretry = 1
 
 
+<% if @additional_jails -%>
 #
 # Additional jails
 #
@@ -609,3 +610,4 @@ filter = nginx-proxy
 logpath = /var/log/nginx*/*access*.log
 maxretry = 0
 bantime  = 86400 # 1 day
+<% end -%>
